# kk-game

./: .gitignore  Dockerfile  README.md  build.sh  centos.sh
KKGame.framework/: Info.plist
KKGame.framework/Headers/: KKGLContext.h  KKGLViewElement.h  KKGame.h  KKGamepadElement.h
KKGame.framework/Modules/: module.modulemap
KKGame/KKGame/: KKGLContext.h  KKGLContext.mm  KKGLView.h  KKGLView.m  KKGLView.mm  KKGLViewElement.h  KKGLViewElement.mm  KKGame.h  KKGamepadElement.h  KKGamepadElement.m  KKJSContextAsync.h  KKJSContextAsync.mm  KKJSContextWorker.h  KKJSContextWorker.mm  KKStrong.h  KKStrong.mm  KKWeak.h  KKWeak.mm  KKWebSocket+JSContext.h  KKWebSocket+JSContext.mm
KKGame/KKGame.xcodeproj/: project.pbxproj
KKGame/KKGame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KKGame/KKGame.xcodeproj/project.xcworkspace/xcuserdata/hailong11.xcuserdatad/: UserInterfaceState.xcuserstate
KKGame/KKGame.xcodeproj/project.xcworkspace/xcuserdata/zhanghailong.xcuserdatad/: UserInterfaceState.xcuserstate
KKGame/KKGame.xcodeproj/xcuserdata/hailong11.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
KKGame/KKGame.xcodeproj/xcuserdata/hailong11.xcuserdatad/xcschemes/: KKGame.xcscheme  app.xcscheme  demo.xcscheme  kk-app.xcscheme  xcschememanagement.plist
KKGame/KKGame.xcodeproj/xcuserdata/zhanghailong.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
KKGame/KKGame.xcodeproj/xcuserdata/zhanghailong.xcuserdatad/xcschemes/: app.xcscheme  demo.xcscheme  xcschememanagement.plist
KKGame/app/: Makefile  kk-view.cpp  kk-view.h  main.cpp  main.mm
KKGame/demo/: AppDelegate.h  AppDelegate.mm  KKGestureElement.h  KKGestureElement.m  main.js  main.m
KKGame/demo/Base.lproj/: Main.storyboard
app/: kk-app.cc  kk-app.h  kk-atomic-pthread.cc  kk-binary.cc  kk-binary.h  kk-block.cc  kk-block.h  kk-chan.cc  kk-chan.h  kk-config.h  kk-crypto.cc  kk-crypto.h  kk-dispatch.cc  kk-dispatch.h  kk-element.cc  kk-element.h  kk-ev.cc  kk-ev.h  kk-event.h  kk-http.cc  kk-http.h  kk-lws.cc  kk-lws.h  kk-object.cc  kk-object.h  kk-script.cc  kk-script.h  kk-string.cc  kk-string.h  kk-uv.cc  kk-uv.h  kk-websocket.cc  kk-websocket.h  kk-wk.cc  kk-wk.h  kk-ws.cc  kk-ws.h  kk-y.cc  kk-y.h  kk-yaml.cc  (+1 more)
app/GA/: GAAction.cc  GAAction.h  GAActionFlight.cpp  GAActionMove.cc  GAActionMove.h  GAActionWalk.cc  GAActionWalk.h  GABody.cc  GABody.h  GACollision.cc  GACollision.h  GAContext.cc  GAContext.h  GADocument.cc  GADocument.h  GAInCollision.cc  GAInCollision.h  GAScene.cc  GAScene.h  GAShape.cc  GAShape.h  GATileMap.cc  GATileMap.h
app/GL/: GLAnimation.cc  GLAnimation.h  GLContext.cc  GLContext.h  GLImageElement.cc  GLImageElement.h  GLMetaElement.cc  GLMetaElement.h  GLMinimapElement.cc  GLMinimapElement.h  GLProgramElement.cc  GLProgramElement.h  GLRenderElement.cc  GLRenderElement.h  GLShapeElement.cc  GLShapeElement.h  GLSliceMapElement.cc  GLSliceMapElement.h  GLSpineElement.cc  GLSpineElement.h  GLTextElement.cc  GLTextElement.h  GLTileMapElement.cc  GLTileMapElement.h  GLViewElement.cc  GLViewElement.h  GLViewportElement.cc  GLViewportElement.h
demo/: gradle.properties  kk-app  kk-duktape  kk-http  kk-image  kk-observer  kk-script  kk-view  kk-websocket  settings.gradle
demo/app/: build.gradle
demo/gradle/wrapper/: gradle-wrapper.properties
glsl/: GLSLFillColor.cc  GLSLFillColor.fsh  GLSLFillColor.h  GLSLFillColor.vsh  GLSLTexture.cc  GLSLTexture.fsh  GLSLTexture.h  GLSLTexture.vsh
js/: require_js.h
kk-game/: CMakeLists.txt  build.gradle
kk-game/src/androidTest/java/cn/kkmofang/game/: ExampleInstrumentedTest.java
kk-game/src/main/: AndroidManifest.xml
kk-game/src/main/java/cn/kkmofang/game/: Context.java  GAProtocol.java  GLSurfaceViewLooper.java  GLViewElement.java  JSWebSocket.java  TextPaint.java  Weak.java  WeakImage.java  WeakTexture.java
kk-game/src/main/jni/: Box2D  Chipmunk2D  duktape  glm  glsl  kk-element  kk-game.cc  kk-object  kk.c  kk.h  spine
kk-game/src/main/jni/libevent/include/event2/: event-config.h
kk-game/src/test/java/cn/kkmofang/game/: ExampleUnitTest.java
lib/: libevent-ios.sh
lib/Chipmunk2D/: CMakeLists.txt
lib/Chipmunk2D/src/: cpHastySpace.c
lib/KKApplication.framework/: KKApplication
lib/KKDuktape.framework/: Info.plist
lib/KKDuktape.framework/Headers/: KKDuktape.h  duk_config.h  duk_config_debug.h  duktape.h
lib/KKElement.framework/: Info.plist
lib/KKElement.framework/Headers/: KKElement.h  kk-document-binary.h  kk-document.h  kk-element-style.h  kk-element.h
lib/KKElement.framework/Modules/: module.modulemap
lib/KKEvent.framework/: Info.plist  KKEvent
lib/KKEvent.framework/Headers/: KKEvent.h
lib/KKHttp.framework/: KKHttp
lib/KKHttp.framework/Headers/: KKHttp.h
lib/KKObserver.framework/: KKObserver
lib/KKObserver.framework/Headers/: KKObserver.h
lib/KKView.framework/: KKView
lib/KKWebSocket.framework/: Info.plist  KKWebSocket
lib/KKWebSocket.framework/Headers/: KKWebSocket.h
lib/libbase64/: base64.c
lib/libevent/arm64-v8a/include/event2/: event-config.h
lib/libevent/arm64-v8a/lib/cmake/libevent/: LibeventTargets-release.cmake
lib/libevent/arm64-v8a/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
lib/libevent/armeabi-v7a/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
lib/libevent/armeabi/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
lib/libevent/x86/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
lib/libevent/x86_64/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
lib/libuv/: autogen.sh
lib/libwebsockets/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LibwebsocketsConfig.cmake  LibwebsocketsTargets.cmake  install_manifest.txt  libwebsockets-test-server.pem
lib/libwebsockets/include/: lws_config.h
lib/libwebsockets/lib/: libwebsockets.so.13
lib/libwebsockets/share/libwebsockets-test-server/: libwebsockets-test-server.key.pem
lib/libyaml/: .gitignore  DartConfiguration.tcl
lib/libyaml/src/: yaml_private.h
lib/spine/src/spine/: SkeletonBinary.c  SkeletonJson.c
(+1 files in other folders)
